fix(shop): fix overflowing top bar

--- a/src/pages/shop/shop.scss
+++ b/src/pages/shop/shop.scss
@@ -173,7 +173,7 @@
         justify-content: space-between;
 
         @media (min-width: $mobileSize) {
-            max-width: 100%;
+            max-width: 1400px;
             top: calc(77px + 25px);
         }
     }
